--- a/task-module/src/pages/TaskDetailPage/TaskDetail.css
+++ b/task-module/src/pages/TaskDetailPage/TaskDetail.css
@@ -191,6 +191,7 @@
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
+    margin-bottom: 10px;
   }
   
   /* Блок с описанием */
