--- a/task-module/src/pages/UserProfile/UserProfile.css
+++ b/task-module/src/pages/UserProfile/UserProfile.css
@@ -57,7 +57,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg,#b8cafe, #4361ee 66%);
+  background: linear-gradient(135deg,#b8cafe, #001574 66%);
   font-size: 2.7rem;
   color: #fff;
   font-weight: 600;
@@ -66,9 +66,9 @@
 }
 .profile-picture-overlay {
   position: absolute;
-  left: 0; right: 0; bottom: 0;
+  left: 0; right: 0; bottom: 15px;
   height: 34px;
-  background: linear-gradient(0deg,rgba(67,97,238,0.94),rgba(67,97,238,0.32) 75%,transparent);
+  /* background: linear-gradient(0deg,rgba(0, 19, 104, 0.94),rgba(67,97,238,0.32) 75%,transparent); */
   color: #fff;
   font-size: .92rem;
   font-weight: 500;
